add first implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.application.name=spring-batch-hypersql
+spring.application.name=spring-batch-1
+spring.application.version=1.0.0
 logging.level.com.abimulia.batch=DEBUG
+logging.level.org.springframework.batch=DEBUG
