--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring-batch-1
 spring.application.version=1.0.0
 logging.level.com.abimulia.batch=DEBUG
-logging.level.org.springframework.batch=DEBUG
+logging.level.org.springframework.batch=INFO
+logging.level.ROOT=ERROR
